<?xml version="1.0" encoding="utf-8"?>
<!-- Fragment screen where new users can register an account -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/layout_horizontal_margin"
    android:layout_marginRight="@dimen/layout_horizontal_margin"
    android:orientation="vertical"
    tools:context=".LoginActivityScreens.RegisterFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_page_header"
        android:textSize="@dimen/register_page_header"
        android:paddingTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_header"
        android:textSize="@dimen/main_text_size"
        android:paddingTop="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/paddingTop"
        android:id="@+id/new_user_username"
        android:hint="@string/username_hint"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_header"
        android:textSize="@dimen/main_text_size"
        android:paddingTop="@dimen/paddingTop"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/paddingTop"
        android:id="@+id/new_user_password"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_confirm"
        android:textSize="@dimen/main_text_size"
        android:paddingTop="@dimen/paddingTop"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/paddingTop"
        android:id="@+id/password_confirm"
        android:inputType="textPassword"
        android:hint="@string/password_confirm_hint"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:paddingTop="@dimen/paddingTop"
        android:id="@+id/final_register_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_login_page"
        android:paddingTop="@dimen/paddingTop"
        android:id="@+id/to_login_page"/>
</LinearLayout>