<?xml version="1.0" encoding="utf-8"?>
<!-- Layout file to allow users to edit a given task -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/layout_horizontal_margin"
    android:layout_marginRight="@dimen/layout_horizontal_margin"
    android:orientation="vertical"
    tools:context=".GroupActivityScreens.EditTaskActivity">
    <!-- Task title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingGeneral"
        android:textSize="@dimen/standard_header2_size"
        android:text="@string/task_title_header"/>
    <EditText
        android:id="@+id/edit_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_text_size"
        android:padding="@dimen/paddingGeneral"/>
    <!-- Task contents -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_header2_size"
        android:padding="@dimen/paddingGeneral"
        android:text="@string/task_contents_header"/>
    <EditText
        android:id="@+id/edit_task_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_text_size"
        android:padding="@dimen/paddingGeneral"/>
    <!-- Task user (i.e. who posted the task) -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_header2_size"
        android:padding="@dimen/paddingGeneral"
        android:text="@string/task_user_header"/>
    <TextView
        android:id="@+id/edit_task_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_text_size"
        android:padding="@dimen/paddingGeneral"/>
    <!-- Button to save edits/changes to the current task -->
    <Button
        android:id="@+id/save_task_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingGeneral"
        android:text="@string/save_task_changes"/>
</LinearLayout>